arkts_static_test/06_Contexts_Conversions/ets_cases/6.1_Assignment_like_Contexts/compile-fail/CON_06_01_020_FAIL_ASSIGNMENT_FIELD_MISMATCH.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id CON_06_01_020_FAIL_ASSIGNMENT_FIELD_MISMATCH
 * @expect compile-fail
 * @section 6.1
 * @design Assignment context: зҖӣжҘҒоҶҢз’§е¬ӘвӮ¬е…јжӨӮзҗӣг„ЁжҸӘеҜ®еҝ•иў«йҚЁ?boolean)ж¶“еәЎз“§еЁҲз”өиў«йҚЁ?int)ж¶“е¶…е°®й–°е¶„з¬–йҸғзҠ»ж®ЈеҜ®еҝҡжөҶйҺ№?
 * @note йҚҷе¶…жӮңйҗўг„Өз·Ҙй”ӣж°¶зҚҷз’ҮдҪҪоҮҡйҚҰзғҳж«ҷжҗҙж–ҫйӘҮйҗўзҶәзҙӘз’ҮжҲһжӨӮй–ҝж¬’оҮӨ
 */
class Holder {
  public value: int = 0
}

function testAssignmentFieldMismatchFail(): void {
  let h: Holder = new Holder()
  h.value = false
}